deployment/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-cloud
  namespace: go-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-cloud
  template:
    metadata:
      labels:
        app: go-cloud
    spec:
      containers:
        - name: go-cloud
          image: go-cloud:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
