deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-cloud
spec:
  replicas: 1 # Пока хватит одного пода, как унитаза в квартире
  selector:
    matchLabels:
      app: go-cloud
  template:
    metadata:
      labels:
        app: go-cloud
    spec:
      containers:
        - name: go-cloud
          image: go-cloud:1.0 # Тот самый образ, что собрали
          imagePullPolicy: Never # Говорим Kubernetes не качать образ из интернета (он уже в Minikube)
          ports:
            - containerPort: 8080 # Порт, который слушает твоё Go-приложение
