deployment/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-cloud-svc
spec:
  selector:
    app: go-cloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
