deployment/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: go-cloud
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
