deployment/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: go-cloud
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
