deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-cloud-service
spec:
  selector:
    app: go-cloud # Связываем с Deployment
  ports:
    - protocol: TCP
      port: 80 # Порт сервиса
      targetPort: 8080 # Порт пода (как в Deployment)
  type: NodePort # Делаем доступным снаружи
